--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "mysql": "^2.11.1",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "sequelize": "^3.24.3"
   }
 }
