--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node crawler.js"
+    "start": "node crawler.js & echo $! >/tmp/ygfb_crawler.pid",
+    "stop": "cat /tmp/ygfb_crawler.pid | awk '{print $1}' | xargs kill -9"
   },
   "author": "",
   "license": "ISC",
